--- a/test.html
+++ b/test.html
@@ -220,7 +220,7 @@ to {opacity: 1}
 
 <div class="numbertext">1 / 3</div>
 
-<img src="IMG_4407.jpg" style="width:100%">
+<img src="tt3.jpg" style="width:100%">
 
 <div class="text">Caption Text</div>
 
@@ -232,7 +232,7 @@ to {opacity: 1}
 
 <div class="numbertext">2 / 3</div>
 
-<img src="IMG_4090 (2).JPG" style="width:100%">
+<img src="tt2.JPG" style="width:100%">
 
 <div class="text">Caption Two</div>
 
@@ -244,7 +244,7 @@ to {opacity: 1}
 
 <div class="numbertext">3 / 3</div>
 
-<img src="New Good PFP (2).jpg" style="width:100%">
+<img src="tt1.jpg" style="width:100%">
 
 <div class="text">Caption Three</div>
 
