--- a/test.html
+++ b/test.html
@@ -220,7 +220,7 @@ to {opacity: 1}
 
 <div class="numbertext">1 / 3</div>
 
-<img src="tt2.jpg" style="width:100%">
+<img src="damian-zaleski-RYyr-k3Ysqg-unsplash-1-scaled.jpg" style="width:100%">
 
 <div class="text">Caption Text</div>
 
@@ -232,7 +232,7 @@ to {opacity: 1}
 
 <div class="numbertext">2 / 3</div>
 
-<img src="tt3.JPG" style="width:100%">
+<img src="image2-5x3-1.png" style="width:100%">
 
 <div class="text">Caption Two</div>
 
@@ -244,7 +244,7 @@ to {opacity: 1}
 
 <div class="numbertext">3 / 3</div>
 
-<img src="tt1.jpg" style="width:100%">
+<img src="zan-X_JsI_9Hl7o-unsplash-scaled.jpg" style="width:100%">
 
 <div class="text">Caption Three</div>
 
