--- a/test.html
+++ b/test.html
@@ -220,7 +220,7 @@ to {opacity: 1}
 
 <div class="numbertext">1 / 3</div>
 
-<img src="damian-zaleski-RYyr-k3Ysqg-unsplash-1-scaled.jpg" style="width:100%">
+<img src="https://i.ibb.co/p1N9rjV/damian-zaleski-RYyr-k3-Ysqg-unsplash-1-scaled.jpg" style="width:100%">
 
 <div class="text">Caption Text</div>
 
