--- a/test.html
+++ b/test.html
@@ -4,7 +4,7 @@
 
 <head>
 
-<link rel="stylesheet" href="https://github.com/edjshen/edjshen.github.io/edit/main/test.css">
+<link rel="stylesheet" href="https://github.com/margklin/margklin.github.io/edit/main/test.css">
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
